--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ a:hover{
         padding: 10px 30px 10px 30px; 
         align-content: center;
     }
-.house:hover {
+/*.house:hover {
     position:relative;
     top:-25px;
     left:-35px;
@@ -246,7 +246,7 @@ a:hover{
     height:auto;
     display:block;
     z-index:999;
-}
+}*/
 .agent{
         border-radius: 10%;
         height: 300px;
