--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ a:hover{
         align-content: center;
         font-size: 22px;
         font-family: times;
+        font-weight: bold;
     }
 .house{
         border-radius: 20%;
@@ -141,6 +142,7 @@ a:hover{
         align-content: center;
         font-size: 22px;
         font-family: times;
+        font-weight: bold;
     }
 .house{
         border-radius: 20%;
@@ -229,6 +231,7 @@ a:hover{
         align-content: center;
         font-size: 22px;
         font-family: times;
+        font-weight: bold;
     }
 .house{
         border-radius: 20%;
