--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,7 @@ a:hover{
     background-color: #ecf0f1; 
     }
 .logo{
-        height: 50%;
-        width: 50%;
-        padding-left: 10px;
+       display:none;
     }
 .navbar{
     width: auto;
